publisher functions added

--- a/src/mf_config.ini
+++ b/src/mf_config.ini
@@ -1,7 +1,7 @@
 ;Monitoring Framework Configuration
 
 [generic]
-server = http://localhost:3030
+server = http://localhost:3030/v1
 platform_id = platform_default
 
 [plugins]
