make bulk_size configurable via mf_config.ini

--- a/src/mf_config.ini
+++ b/src/mf_config.ini
@@ -3,6 +3,7 @@
 [generic]
 server = http://localhost:3030/v1
 platform_id = platform_default
+bulk_size = 8
 
 [plugins]
 mf_plugin_Board_power = off
