--- a/src/plugins/CPU_perf/Makefile
+++ b/src/plugins/CPU_perf/Makefile
@@ -5,7 +5,7 @@ CC = gcc
 COPT_SO = ${CFLAGS} -fpic
 
 CFLAGS = -std=gnu99 -pedantic -Wall -Wwrite-strings  -Wpointer-arith -Wcast-align -O0 -ggdb \
--I${SRC} ${PAPI_INC} ${PARSER_INC} ${UTILS_INC} ${AGENT_INC} ${EXCESS_QUEUE_INC}
+-I${SRC} ${PAPI_INC} ${PARSER_INC} ${UTILS_INC} ${AGENT_INC} ${EXCESS_QUEUE_INC} ${CORE_INC}
 
 LFLAGS = -lrt -ldl -Wl,-rpath,${PAPI_PATH} ${PAPI_LIB}
 
@@ -27,6 +27,7 @@ PARSER_INC = -I${CURDIR}/../../parser/src
 UTILS_INC = -I${CURDIR}/../utils
 AGENT_INC = -I${CURDIR}/../../agent
 EXCESS_QUEUE_INC = -I${CURDIR}/../../../ext/queue
+CORE_INC = -I${CURDIR}/../../core 
 
 all: clean prepare mf_CPU_perf_client mf_plugin_CPU_perf.so
 
