tested in node01

--- a/src/mf_config.ini
+++ b/src/mf_config.ini
@@ -1,12 +1,12 @@
 ;Monitoring Framework Configuration
 
 [generic]
-server = http://localhost:3040/v1
+server = 192.168.0.2:3040/v1
 platform_id = platform_default
 bulk_size = 8
 
 [plugins]
-mf_plugin_Board_power = off
+mf_plugin_Board_power = on
 mf_plugin_CPU_perf = on
 mf_plugin_CPU_temperature = on
 mf_plugin_Linux_resources = on
@@ -17,11 +17,11 @@ mf_plugin_NVML = on
 default               = 1000000000ns
 update_configuration  = 360s
 mf_plugin_Board_power = 5000000000ns
-mf_plugin_CPU_perf = 3000000000ns
-mf_plugin_CPU_temperature = 1000000000ns
-mf_plugin_Linux_resources = 6000000000ns
-mf_plugin_Linux_sys_power = 7000000000ns
-mf_plugin_NVML = 2000000000ns
+mf_plugin_CPU_perf = 5000000000ns
+mf_plugin_CPU_temperature = 5000000000ns
+mf_plugin_Linux_resources = 5000000000ns
+mf_plugin_Linux_sys_power = 5000000000ns
+mf_plugin_NVML = 5000000000ns
 
 
 [mf_plugin_Board_power]
