--- a/src/api/app_alexy/Makefile
+++ b/src/api/app_alexy/Makefile
@@ -1,7 +1,7 @@
 appname := myapp
 
 CXX := g++
-CXXFLAGS := -Wall -g
+CXXFLAGS := -Wall -g -std=c++11
 
 srcfiles := $(shell find . -maxdepth 1 -name "*.cpp")
 objects  := $(patsubst %.cpp, %.o, $(srcfiles))
