change board_power plugin to get acme board name from mf_config.ini

--- a/src/mf_config.ini
+++ b/src/mf_config.ini
@@ -16,15 +16,17 @@ mf_plugin_NVML = on
 [timings]
 default               = 1000000000ns
 update_configuration  = 360s
-mf_plugin_Board_power = 5000000000ns
-mf_plugin_CPU_perf = 5000000000ns
-mf_plugin_CPU_temperature = 5000000000ns
-mf_plugin_Linux_resources = 5000000000ns
-mf_plugin_Linux_sys_power = 5000000000ns
-mf_plugin_NVML = 5000000000ns
+mf_plugin_Board_power = 1000000000ns
+mf_plugin_CPU_perf = 1000000000ns
+mf_plugin_CPU_temperature = 1000000000ns
+mf_plugin_Linux_resources = 2000000000ns
+mf_plugin_Linux_sys_power = 2000000000ns
+mf_plugin_NVML = 1000000000ns
 
 
 [mf_plugin_Board_power]
+;ACME_BOARD_NAME = power-nvidia-0
+ACME_BOARD_NAME = baylibre-acme.local
 device0:current = on
 device0:vshunt = on
 device0:vbus = on
