add RAPL plugin in config.ini

--- a/src/mf_config.ini
+++ b/src/mf_config.ini
@@ -12,6 +12,7 @@ mf_plugin_CPU_temperature = on
 mf_plugin_Linux_resources = on
 mf_plugin_Linux_sys_power = on
 mf_plugin_NVML = on
+mf_plugin_RAPL_power = on
 
 [timings]
 default               = 1000000000ns
@@ -22,6 +23,7 @@ mf_plugin_CPU_temperature = 1000000000ns
 mf_plugin_Linux_resources = 2000000000ns
 mf_plugin_Linux_sys_power = 2000000000ns
 mf_plugin_NVML = 1000000000ns
+mf_plugin_RAPL_power = 1000000000ns
 
 
 [mf_plugin_Board_power]
@@ -64,3 +66,7 @@ PCIe_snd_throughput = on
 PCIe_rcv_throughput = on
 temperature = on
 power = on
+
+[mf_plugin_RAPL_power]
+total_power = on
+dram_power = on
