add readme files for the 1st release

--- a/src/mf_config.ini
+++ b/src/mf_config.ini
@@ -1,7 +1,7 @@
 ;Monitoring Framework Configuration
 
 [generic]
-server = 192.168.0.2:3040/v1
+server = 141.58.0.8:3033/v1
 platform_id = platform_default
 bulk_size = 8
 
@@ -52,11 +52,11 @@ net_throughput = on
 io_throughput = on
 
 [mf_plugin_Linux_sys_power]
-power_CPU = on
-power_mem = on
-power_net = on
-power_disk = on
-power_total = on
+estimated_CPU_power = on
+estimated_wifi_power = on
+estimated_memory_power = on
+estimated_disk_power = on
+estimated_total_power = on
 
 [mf_plugin_NVML]
 gpu_usage_rate = on
