Changed to the default config option

--- a/src/mf_config.ini
+++ b/src/mf_config.ini
@@ -1,8 +1,8 @@
 ;Monitoring Framework Configuration
 
 [generic]
-server = 141.58.0.8:3033/v1
-platform_id = platform_default
+server = localhost:3033/v1
+platform_id = alex_platform_default
 bulk_size = 8
 
 [plugins]
@@ -27,8 +27,9 @@ mf_plugin_RAPL_power = 1000000000ns
 
 
 [mf_plugin_Board_power]
-;ACME_BOARD_NAME = power-nvidia-0
-ACME_BOARD_NAME = baylibre-acme.local
+;ACME_BOARD_NAME = power-nvidia-0   - the dns of the board installed on the EXCESS cluster
+; - the dns of the 2nd board that was tested on the EXCESS cluster
+ACME_BOARD_NAME = power-jetson.local
 device0:current = on
 device0:vshunt = on
 device0:vbus = on
